--- a/pages/rerent.html
+++ b/pages/rerent.html
@@ -13,7 +13,8 @@ layout: default
     <div id="menu" style="opacity: 1; display: none;" class="section-nav w-clearfix">
         <a href="#intro" class="section-links intro w-button w--current" style="color: rgb(179, 180, 186);">Background
             &amp; Context</a>
-        <a href="#process" class="section-links research w-button" style="color: rgb(179, 180, 186);">Development and Design Process</a>
+        <a href="#process" class="section-links research w-button" style="color: rgb(179, 180, 186);">Development and
+            Design Process</a>
         <a href="#results" class="section-links results w-button" style="color: rgb(179, 180, 186);">Final Results</a>
         <a href="#challenges" class="section-links results w-button" style="color: rgb(179, 180, 186);">Challenges &amp;
             Learnings</a><a href="#final" class="section-links future w-button" style="color: rgb(179, 180, 186);">Final
@@ -24,17 +25,19 @@ layout: default
         <div class="prose mb-2 py-4">
             <h1 id="intro">ReRent — Software Development and Product Management</h1>
             <div style="display: grid;grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));width: 100%;grid-column-gap: 2em;grid-row-gap: 2em;">
-                <div><h6>Duration</h6>Summer 2020—Present</div>
+                <div><h6>Duration</h6>June 2020—Present</div>
                 <div><h6>Tools</h6>Python, Django, PostgreSQL, Heroku, Figma, FlowMapp</div>
-                <div><h6>Key Skills</h6>Web Development, Agile Development, Prototyping, User Testing</div>
+                <div><h6>Key Skills</h6>Web Development, Agile Software Development, Prototyping, User Testing</div>
             </div>
             <br><br>
-            <p>$4,320. That’s how much money the average college student wastes every year paying for rent when they’re
+            <p><span class="blue">$4,320</span>. That’s how much money the average college student wastes every year
+                paying for rent when they’re
                 away on break. Though most students only need housing for at most 9 months out of the
-                year, high demand and limited options allow landlords to keep leases at 12-months long in many college towns.
-                With operational difficulties such as cleaning up before and after a guest stays in your home,
-                home-sharing is generally out of reach for the average college student. ReRent was created to help
-                students rent out their housing, hassle-free.
+                year, high demand and limited options allow landlords to keep leases at 12-months long in many college
+                towns.
+                Operational difficulties — such as cleaning up before and after a guest stays in your home — have made
+                home-sharing out of reach for most college students. ReRent was created to take care of all these
+                operational hassles and help students save money on housing.
                 <br><br>
                 DETAIL RERENT'S PREVIOUS OPERATIONS. ALSO DETAIL SUSTAINABILITY/HOUSING EQUITY
                 <br><br>
@@ -42,8 +45,8 @@ layout: default
                 IN PROGRESS.
             </p>
 
-            <div style="margin-left: -10em;margin-top: 2em;">
-                <h5 id="problem">Problem</h5>
+            <div id="problem" style="margin-left: -10em;margin-top: 2em;">
+                <p class="project-descriptions">Problem</p>
             </div>
             <h3 style="text-align: center; margin-top: -1.5em;">How can I make ReRent scalable so we can help more
                 students make the most of their housing? What infrastructure is needed to make home-sharing entirely
@@ -52,12 +55,11 @@ layout: default
         </div>
     </article>
 
-    <div id="solution"
-         style="background-color: #ff9900;background-image: url(/uploads/aws_overlay.png);background-size: contain;">
+    <div id="solution">
         <article class="container mx-auto px-2 mt2 mb4">
             <div class="prose mb-4 py-4">
-                <h5 style="color:white; margin-left: -10em;">The Solution</h5>
-                <h3 style="margin-top: -1.8em; color:white;">Building an automated/programmatic solution to access a
+                <p class="project-descriptions">Solution</p>
+                <h3 style="margin-top: -1.8em; color:white;">Build a web application to be able to reach a
                     wider customer base. Make interactions seamless and familiar to help students help themselves.
                 </h3>
             </div>
@@ -68,111 +70,64 @@ layout: default
         <div class="prose mb-4 pb-4">
             <div style="margin-left: -10em;">
                 <h5 id="process">Process</h5>
-
             </div>
 
             <h2 style="margin-top: -1.3em;">A customer-centered design process</h2>
+        </div>
+    </article>
+
+    <article class="container mx-auto px-2 mt2 mb4">
+        <div class="prose mb-4 pb-4">
+
+            <h2 style="margin-top: -1.3em;">Designing for unfamiliar users</h2>
 
         </div>
     </article>
 
-    <div style="text-align:center;">
-        <img src="/uploads/aws_process.png" style="max-width: 85%;">
+    <article class="container mx-auto px-2 mt2 mb4">
+        <div class="prose mb-4 pb-4">
 
-    </div>
-    <br><br>
+            <h2 style="margin-top: -1.3em;">Recognition rather than recall</h2>
 
-    <div>
-        <article class="container mx-auto px-2 mt-2 mb-4">
+        </div>
+    </article>
 
+    <article class="container mx-auto px-2 mt2 mb4">
+        <div class="prose mb-4 pb-4">
 
-            <h5 style="margin-left: -10em;" id="results">Results</h5>
+            <h2 style="margin-top: -1.3em;">Working from home, and the transition from software engineering intern
+                to product manager role</h2>
 
-            <h2 style="margin-top: -1.2em;">A redesigned console customers rated as having 66% more functionality and
-                12% easier to use</h2>
-            <div class="mb-4">
-                <p>After taking in user feedback from usability testing and final critiques from my stakeholders, I
-                    created 3 design iterations and delivered a full redesign of the dashboard, checks page, and
-                    preferences screen, as well as reimagined their main flows. I successfully created a redesign with
-                    current customer insights at the center of the process.<br><br>In my usability study, 7
-                    external/internal users rated the redesigned console as:</p>
-                <div style="display: grid;grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));width: 100%;grid-column-gap: 2em;grid-row-gap: 2em;">
-                    <h3>66% greater functionality and useful features</h3>
-                    <h3>12% easier to use, worth the higher learning curve</h3>
-                    <h3>All would use the redesign more frequently</h3></div>
+        </div>
+    </article>
+
+    <article class="container mx-auto px-2 mt2 mb4">
+        <div class="prose mb-4 pb-4">
+            <h2 style="margin-top: -1.3em;">Learning how to conduct formal user interviews</h2>
+            <p style="max-width: 24em;margin-right: 1em;">I had never formally run user interviews or conducted
+                usability testing before. Getting to tackle the entire process, from recruiting users, to creating
+                the scripts, to running the sessions was a great learning experience that taught me the art of truly
+                listening to the user and digging deeper into the “why” of their insights.
+            </p>
+        </div>
+    </article>
+
+    <article class="container mx-auto px-2 mt2 mb4">
+        <div class="prose mb-4 pb-4">
+            <div style="margin-left: -10em;">
+                <h5 id="results">Impact and Results</h5>
             </div>
-            <div style="margin-left: -10em;" id="challenges">
-                <h5>Challenges</h5>
-                <h5>+ Learnings</h5>
-            </div>
-            <h2 style="margin-top: -2.4em;">Designing for a complex tool and unfamiliar user</h2>
-            <div class="mb-4" style="display: flex;flex-wrap: wrap;">
-                <p style="max-width: 29em;margin-right: 1em;">I came into this internship with no prior knowledge or
-                    experience in cloud computing and designing for more technical users, like DevOps or cloud
-                    architects. Quickly learning how TA works and how different users typically manage their cloud
-                    environments were definitely a challenge I initially faced, but after my research, I was able to
-                    familiarize myself with this type of tool and user.</p><img src="/uploads/aws_ta.png" alt=""
-                                                                                style="max-width: 10em;margin-bottom: 1em;margin-left: 3em;">
-            </div>
-            <h2>Working from home, holding meetings, creating balanced schedule</h2>
-            <div class="mb-4" style="display: flex;flex-wrap: wrap;">
-                <p style="max-width: 27em;">While I’m grateful that I was still able to work this internship in the
-                    middle of the pandemic, there came challenges with me finding work-life balance, especially since my
-                    team was mainly based in Seattle while I was 3 hours ahead in Ohio. Additionally, holding meetings
-                    and being able to effectively communicate my ideas to many different audiences was a new experience.
-                    Over time, I became better at understanding how to maximize my productivity at home and how to
-                    communicate.</p><img src="/uploads/aws_homeoffice.jpg" alt=""
-                                         style="max-width: 20em;margin-bottom: 1em;margin-left: 1em;"></div>
-            <h2>Accommodate for the 100%, optimize for the 80%</h2>
-            <div class="mb-4" style="display: flex;flex-wrap: wrap;">
-                <p style="max-width: 29em;margin-right: 1em;">One piece of advice that stuck out to me from a design
-                    critique was the idea of accommodating for the 100% but optimizing for 80%. Although I can’t
-                    optimize the experience for all customers, I can aim to optimize for most. In my redesign of TA, I
-                    overcame the challenge of ensuring this principle.</p><img src="/uploads/aws_10080.png" alt=""
-                                                                               style="max-width: 10em;margin-bottom: 1em;margin-left: 3em;">
-            </div>
-            <h2>How to formally conduct user interviews and usability testing</h2>
-            <div class="mb-4" style="display: flex;flex-wrap: wrap;">
-                <p style="max-width: 24em;margin-right: 1em;">I had never formally run user interviews or conducted
-                    usability testing before. Getting to tackle the entire process, from recruiting users, to creating
-                    the scripts, to running the sessions was a great learning experience that taught me the art of truly
-                    listening to the user and digging deeper into the “why” of their insights.</p><img
-                    src="/uploads/aws_interviews.png" alt="" style="max-width: 22em;margin-bottom: 1em;"></div>
-            <h2>Designing for accessibility</h2>
-            <div class="mb-4" style="display: flex;flex-wrap: wrap;">
-                <p style="max-width: 24em;margin-right: 1em;">I became more aware of accessibility guidelines for text
-                    size, color, contrast ratios, and nesting elements.</p><img src="/uploads/aws_accessibility.png"
-                                                                                alt=""
-                                                                                style="max-width: 22em;margin-bottom: 1em;">
-            </div>
-        </article>
+        </div>
+    </article>
 
-
-        <article class="container mx-auto px-2 mt2 mb4">
-            <div class="prose mb-4 pb-4">
-
-
-                <div id="final" style="margin-left: -10em;"><h5>Final</h5><h5>Words</h5></div>
-                <p style="margin-top: -3.8em;">A huge thank you to my manager Bo and my mentor Aryan for guiding me
-                    along my internship and challenging me with such a large-scope project. I extend my thanks to my PM
-                    Arun, my TPM Joel, the rest of AWS Support’s UX team, and the TA tech team for their feedback and
-                    helping me grow as a designer. I had a great summer and wish I could have worked alongside everyone
-                    in person. :)</p>
-
-
-                <img src="/uploads/aws_intern2020.jpg" alt=""></div>
-            <h5 style="margin-left: -10em;">Let's Go</h5>
-            <div style="margin-top: -1.8em;">
-                Back to <a href="/#portfolio">all of my work</a>, or check out:
-                <br>
-                <div style="display: grid;grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr));width: 100%;grid-column-gap: 2em;">
-                    <h3><a href="/sleeptight">Sleep Tight</a></h3>
-                    <h3><a href="/hivedesk">HiveDesk</a></h3>
-                    <h3><a href="/adobenick">Adobe/Nick</a></h3>
-                    <h3><a href="/xing">X.ing</a></h3>
-                    <h3><a href="/nova">Nova</a></h3>
-                </div>
-            </div>
-        </article>
-    </div>
+    <article class="container mx-auto px-2 mt2 mb4">
+        <div class="prose mb-4 pb-4">
+            <div id="final" style="margin-left: -10em;"><h5>Final</h5><h5>Words</h5></div>
+            <p style="margin-top: -3.8em;">A huge thank you to my mentor Fazail and the founder and CEO of ReRent
+                Alikiah for supporting me throughout this internship and challenging me with such a large-scope project.
+                I also want to thank my development team for their feedback and insight which has helped me grow
+                immensely as developer.
+            </p>
+        </div>
+    </article>
 </div>
